# hdt-arm

./: README.md  esp_imu.ino  ping_dynamixel.py  syncread_manual.py  test_power_supply.py
bno086_broadcaster/: CMakeLists.txt  package.xml
bno086_broadcaster/data/: imu_forearm_8889.csv  imu_upperarm_8888.csv
bno086_broadcaster/src/: bno086_publisher-old-version.cpp  bno086_publisher.cpp  bno086_serial_publisher.cpp  bno086_udp_publisher.cpp  imu_csv_publisher.cpp
esp_imu/imu_node/: imu_node.ino
hdt_arm_bringup/: CMakeLists.txt  package.xml
hdt_arm_bringup/launch/: hdt_arm_real.launch.py  hdt_arm_sim.launch.py  hdt_arm_test.launch.py  s.py
hdt_arm_description/: CMakeLists.txt  package.xml
hdt_arm_description/config/: home_position_params.yaml  initial_positions.yaml  ros2_controllers_real.yaml  ros2_controllers_sim.yaml  ros2_contrrollers.yaml
hdt_arm_description/meshes/: base_link.STL  forearm1_link.STL  forearm2_link.STL  shoulder_link.STL  upperarm1_link.STL  upperarm2_link.STL
hdt_arm_description/urdf/: hdt_arm.ros2_control.xacro  hdt_arm.srdf  hdt_arm.urdf  hdt_arm.urdf.xacro
hdt_arm_description/worlds/: default.sdf
hdt_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hdt_arm_moveit_config/config/: hdt_arm.ros2_control.xacro  hdt_arm.urdf.xacro  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml
hdt_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  test_common.py  test_demo.launch.py  test_real.launch.py  test_servo.launch.py  test_sim.launch.py  warehouse_db.launch.py
hdt_arm_teleop/: CMakeLists.txt  package.xml
hdt_arm_teleop/include/: hardware_recovery_node.hpp  imu_kinematics_node.hpp  joint_constants.hpp  kinematics_math.hpp  low_pass_filter.hpp
hdt_arm_teleop/src/: hardware_recovery_node.cpp  home_position.cpp  imu_kinematics_node.cpp  joint_accuracy_monitor_node.cpp  joint_state_bridge.cpp  main.cpp  test_joint_jog_controller.cpp
test_1/elbow_joint/: elbow_joint_0.db3  metadata.yaml
test_1/shoulder_pitch/: metadata.yaml  shoulder_pitch_0.db3
test_1/shoulder_roll/: metadata.yaml  shoulder_roll_0.db3
test_1/upperarm_twist/: metadata.yaml  upperarm_twist_0.db3
test_1/wrist_joint/: metadata.yaml  wrist_joint_0.db3
test_2/elbow_joint/: elbow_joint_0.db3  metadata.yaml
test_2/shoulder_pitch/: metadata.yaml  shoulder_pitch_0.db3
test_2/shoulder_roll/: metadata.yaml  shoulder_roll_0.db3
test_2/upper_twist/: metadata.yaml  upper_twist_0.db3
test_2/wrist_joint/: metadata.yaml  wrist_joint_0.db3
test_3/elbow_joint/: elbow_joint_0.db3  metadata.yaml
test_3/shoulder_pitch/: metadata.yaml  shoulder_pitch_0.db3
test_3/shoulder_roll/: metadata.yaml  shoulder_roll_0.db3
test_3/upper_twist/: metadata.yaml  upper_twist_0.db3
test_3/wrist_joint/: metadata.yaml  wrist_joint_0.db3
test_4/elbow_joint/: elbow_joint_0.db3  metadata.yaml
test_4/shoulder_pitch/: metadata.yaml  shoulder_pitch_0.db3
test_4/shoulder_roll/: metadata.yaml  shoulder_roll_0.db3
test_4/upper_twist/: metadata.yaml  upper_twist_0.db3
test_4/wrist_joint/: metadata.yaml  wrist_joint_0.db3
test_countinue_1/all_joint/: all_joint_0.db3  metadata.yaml
test_countinue_1/all_joint_2/: all_joint_2_0.db3  all_joint_2_1.db3  all_joint_2_2.db3  all_joint_2_3.db3  all_joint_2_4.db3  all_joint_2_5.db3  all_joint_2_6.db3  all_joint_2_7.db3  all_joint_2_8.db3  metadata.yaml
test_imu/: metadata.yaml  test_imu_0.db3
