<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdt_arm_bringup</name>
  <version>0.1.0</version>
  <description>Launch files สำหรับ HDT Arm (Simulation และ Real Hardware)</description>
  <maintainer email="user@example.com">HDT Arm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 core -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <!-- Gazebo Harmonic — ใช้ ros_gz_* -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <!-- Description และ Teleop packages -->
  <exec_depend>hdt_arm_description</exec_depend>
  <exec_depend>hdt_arm_teleop</exec_depend>

  <!-- xacro -->
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>